--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'><rect width='24' height='24' rx='2' fill='%23f6f3ed'/></svg>">   
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Daniela Porta - Psicología Integrativa</title>
   </head>
