--- a/index.html
+++ b/index.html
@@ -2,9 +2,44 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'><rect width='24' height='24' rx='2' fill='%23f6f3ed'/></svg>">   
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Daniela Porta - Psicología Integrativa</title>
+
+
+
+    <title>Daniela Porta - Psicóloga Integrativa en Barcelona | Sesiones Online</title>
+    <meta name="description" content="Psicología integrativa con Daniela Porta en Barcelona. Sesiones online y presenciales enfocadas en el auto-conocimento y la gestión emocional. Un espacio seguro y libre de juicios para navegar tu periodo de transformación ¡Agenda tu sesión!">
+
+    <meta name="keywords" content=“Psicóloga Barcelona, psicología integrativa, psicología holística, sesiones online, terapia psicológica, bilingual therapist, english speaking therapist Barcelona, holistic psychologist Barcelona, auto-conocimiento, constelaciones familiares, retiros Barcelona, Daniela Porta, psicología holística“>
+
+    <meta name="author" content="Daniela Porta">
+    <meta name="copyright" content="© 2025 Daniela Porta - Psicología Integrativa">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+
+    <!-- ===== OPEN GRAPH (FACEBOOK/WHATSAPP) ===== -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Daniela Porta - Psicóloga Integrativa en Barcelona | Sesiones Online">
+    <meta property="og:description" content="Psicología integrativa con Daniela Porta en Barcelona. Sesiones online y presenciales enfocadas en el auto-conocimento y la gestión emocional. Un espacio seguro y libre de juicios para navegar tu periodo de transformación ¡Agenda tu sesión!">
+    <meta property="og:url" content="https://danielaporta.com">
+    <meta property="og:site_name" content="Daniela Porta - Psicóloga Integrativa en Barcelona | Sesiones Online">
+    <meta property="og:image" content="https://danielaporta.com/images/daniela-porta.jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Daniela Porta - Psicóloga Integrativa especializada en sesiones personalizadas y retiros transformadores">
+    <meta property="og:locale" content="es_ES">
+
+
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'><rect width='24' height='24' rx='2' fill='%23f6f3ed'/></svg>">
+    <!-- ===== CANONICAL URL ===== -->
+    <link rel="canonical" href="https://danielaportap.com">
+
+    <!-- ===== DNS PREFETCH ===== -->
+    <link rel="dns-prefetch" href="//fonts.googleapis.com">
+    <link rel="dns-prefetch" href="//www.google-analytics.com">
+
+    <!-- ===== PERFORMANCE ===== -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
   </head>
   <body>
     <div id="root"></div>
