feat: Update talleres sexion

--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
     <meta property="og:locale" content="es_ES">
 
 
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'><rect width='24' height='24' rx='2' fill='%23f6f3ed'/></svg>">
-    <!-- ===== CANONICAL URL ===== -->
-    <link rel="canonical" href="https://danielaportap.com">
+    <!-- favicon -->
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml;base64,PHN2ZyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnIHZpZXdCb3g9JzAgMCAyNCAyNCc+PHJlY3Qgd2lkdGg9JzI0JyBoZWlnaHQ9JzI0JyByeD0nMicgZmlsbD0nI2Y2ZjNlZCcvPjwvc3ZnPg==">
+    <link rel="shortcut icon" href="data:image/svg+xml;base64,PHN2ZyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnIHZpZXdCb3g9JzAgMCAyNCAyNCc+PHJlY3Qgd2lkdGg9JzI0JyBoZWlnaHQ9JzI0JyByeD0nMicgZmlsbD0nI2Y2ZjNlZCcvPjwvc3ZnPg==">    <!-- ===== CANONICAL URL ===== -->
+
+    <link rel="canonical" href="https://danielaporta.com">
 
     <!-- ===== DNS PREFETCH ===== -->
     <link rel="dns-prefetch" href="//fonts.googleapis.com">
